--- a/src/index.scss
+++ b/src/index.scss
@@ -86,7 +86,8 @@
   @apply scale-x-100;
 }
 .mt-input:focus + label span,
-.mt-input:not(:placeholder-shown) + label span {
+.mt-input:not(:placeholder-shown) + label span 
+{
   top: -14%;
   @apply text-xs leading-tight;
 }
@@ -261,6 +262,26 @@ border-l-0 border-r-0 border-transparent w-2.5 h-2 pointer-events-none;
 .mt-input-outline-success:not(:placeholder-shown) + label:before,
 .mt-input-outline-success:not(:placeholder-shown) + label:after {
   @apply border-green-500 text-green-500;
+}
+
+/* Material Tailwind Select Colors */
+.mt-select-primary-500  {
+  @apply border-primary-500;
+}
+.mt-select-secondary-500  {
+  @apply border-secondary-500;
+}
+.mt-select-success-500  {
+  @apply border-success-500;
+}
+.mt-select-danger-500  {
+  @apply border-danger-500;
+}
+.mt-select-warning-500  {
+  @apply border-warning-500;
+}
+.mt-select-info-500  {
+  @apply border-info-500;
 }
 
 /* Material Tailwind Radio Button and Checkbox Colors */
